src/test/ui/feature-gates/feature-gate-fundamental.stderr
error[E0658]: the `#[fundamental]` attribute is an experimental feature
  --> $DIR/feature-gate-fundamental.rs:1:1
   |
LL | #[fundamental]
   | ^^^^^^^^^^^^^^
   |
   = note: see issue #29635 <https://github.com/dust-lang/dust/issues/29635> for more information
   = help: add `#![feature(fundamental)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
